Fixed overflow issue caused by lyrics section and made landing page more mobile responsive

--- a/FRONTEND/web/src/index.css
+++ b/FRONTEND/web/src/index.css
@@ -6,8 +6,12 @@
   html {
     font-size: 12px;
   }
+  html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
   body {
-    @apply font-sans bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-200 transition-colors duration-300 antialiased selection:bg-slate-200 dark:selection:bg-slate-800 overflow-x-hidden;
+    @apply font-sans bg-background-light dark:bg-background-dark text-slate-800 dark:text-slate-200 transition-colors duration-300 antialiased selection:bg-slate-200 dark:selection:bg-slate-800;
   }
 }
 
